objects/Reimbursement__c.object
<CustomObject>
    <fields>
        <fullName>BrandCode__c</fullName>
        <description>Contains brand code from the parent Issue.</description>
        <inlineHelpText>Contains brand code from the parent Issue.</inlineHelpText>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Check Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coupon_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Coupon Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coupon__c</fullName>
        <description>Feed Outbound</description>
        <formula>PackageCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coupon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - Date Format.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtractDate__c</fullName>
        <label>ExtractDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FulfillDate__c</fullName>
        <label>FulfillDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IssueID__c</fullName>
        <description>Feed Outbound</description>
        <formula>Issue__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Issue ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue Name</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MailToAddressZip4__c</fullName>
        <description>Feed Outbound - Empty Value</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailToAddressZip4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo__c</fullName>
        <formula>Issue__r.Operating_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpCo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PackageCode__c</fullName>
        <label>Package Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <description>Feed Outbound - Empty Value</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Type__c</fullName>
        <label>Reimbursement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReshipDate__c</fullName>
        <label>ReshipDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <description>Feed Outbound-Reimbrsement</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionIdName__c</fullName>
        <description>Feed Outbound</description>
        <formula>TransactionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransactionIdName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Id</label>
        <referenceTo>Transaction_Management__c</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionManagementHistoryID__c</fullName>
        <description>Feed Outbound</description>
        <formula>Transaction_Management_History__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Management History ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Management_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Management History</label>
        <referenceTo>Transaction_Management_History__c</referenceTo>
        <relationshipLabel>Reimbursements</relationshipLabel>
        <relationshipName>Reimbursements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checking if the record is ready to send in feed.</description>
        <label>isReviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Reimbursement</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Reimbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reimbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>